Build the tasks API

--- a/backend/prisma/.env.example
+++ b/backend/prisma/.env.example
@@ -1,2 +1,2 @@
 # DATABASE_URL=mysql://root:@mysql/develop
-DATABASE_URL=mysql://root@localhost/yummypostest?password=
+DATABASE_URL=mysql://root@localhost/todotest?password=
