--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-date-picker": "^4.3.2",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.10.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
